--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Landon McConnell | CSE121B | BYU Idaho</title>
+    <title>Landon McConnell | CSE 121B | BYU-Idaho</title>
 </head>
 <body>
-    <h1>Landon McConnell | CSE121B | BYU Idaho</h1>
+    <h1>Landon McConnell | CSE 121B | BYU-Idaho</h1>
     <h2>New Mexico, USA</h2>
     <hr>
 </body>
