renamed and moved final to project

--- a/project.html
+++ b/project.html
@@ -19,6 +19,6 @@
     <div>Recommendations
         <p id="recommendations">error</p>
     </div>
-    <script src="scripts/main.js"></script>
+    <script src="scripts/project.js"></script>
 </body>
 </html>
