--- a/project.html
+++ b/project.html
@@ -6,18 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    <div>PopulationList
+    <div>
         <p id="PopulationList"></p>
     </div>
 
 
 
-    <div>
+    <div id="statistics">
         <h3>Population statistics</h3>
-        <p id="statistics"></p>
     </div>
-    <div>Recommendations
+    <div>
+        <h3>Recommendations</h3>
         <p id="recommendations">error</p>
+        <p> *Allcaps reflects that the given type is severely under represented.</p>
     </div>
     <script src="scripts/project.js"></script>
 </body>
